--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,10 @@
 .navbar-brand{
-    color:darkcyan !important;
-    font-family:sans-serif
+    color:white !important;
+    font-family:sans-serif;
+    align-self: center;
+}
+
+.pad-latitude{
+    padding: 5px;
+    background-color: darkcyan;
 }
